--- a/latest/admin_api/rooms.html
+++ b/latest/admin_api/rooms.html
@@ -182,29 +182,12 @@
                             <nav class="pagetoc"></nav>
                         </div>
 
-                        <h1 id="contents"><a class="header" href="#contents">Contents</a></h1>
-<ul>
-<li><a href="#list-room-api">List Room API</a></li>
-<li><a href="#room-details-api">Room Details API</a></li>
-<li><a href="#room-members-api">Room Members API</a></li>
-<li><a href="#room-state-api">Room State API</a></li>
-<li><a href="#block-room-api">Block Room API</a></li>
-<li><a href="#delete-room-api">Delete Room API</a>
-<ul>
-<li><a href="#version-1-old-version">Version 1 (old version)</a></li>
-<li><a href="#version-2-new-version">Version 2 (new version)</a></li>
-<li><a href="#status-of-deleting-rooms">Status of deleting rooms</a></li>
-<li><a href="#undoing-room-shutdowns">Undoing room shutdowns</a></li>
-</ul>
-</li>
-<li><a href="#make-room-admin-api">Make Room Admin API</a></li>
-<li><a href="#forward-extremities-admin-api">Forward Extremities Admin API</a></li>
-<li><a href="#event-context-api">Event Context API</a></li>
-</ul>
-<h1 id="list-room-api"><a class="header" href="#list-room-api">List Room API</a></h1>
+                        <h1 id="list-room-api"><a class="header" href="#list-room-api">List Room API</a></h1>
 <p>The List Room admin API allows server admins to get a list of rooms on their
 server. There are various parameters available that allow for filtering and
 sorting the returned list. This API supports pagination.</p>
+<p>To use it, you will need to authenticate by providing an <code>access_token</code>
+for a server admin: see <a href="../usage/administration/admin_api">Admin API</a>.</p>
 <p><strong>Parameters</strong></p>
 <p>The following query parameters are available:</p>
 <ul>
@@ -617,8 +600,6 @@ Depending on the amount of history being purged, a call to the API may take
 several minutes or longer.</p>
 <p>The local server will only have the power to move local user and room aliases to
 the new room. Users on other servers will be unaffected.</p>
-<p>To use it, you will need to authenticate by providing an <code>access_token</code> for a
-server admin: see <a href="../usage/administration/admin_api">Admin API</a>.</p>
 <h2 id="version-1-old-version"><a class="header" href="#version-1-old-version">Version 1 (old version)</a></h2>
 <p>This version works synchronously. That means you only get the response once the server has
 finished the action, which may take a long time. If you request the same action
