deploy: 3914576b2b6272a4be790c89d87649d257018dcf

--- a/develop/print.html
+++ b/develop/print.html
@@ -5824,7 +5824,7 @@ formatters:
 handlers:
     console:
         class: logging.StreamHandler
-        location: ext://sys.stdout
+        stream: ext://sys.stdout
     file:
         class: logging.FileHandler
         formatter: json
