--- a/develop/print.html
+++ b/develop/print.html
@@ -1647,6 +1647,23 @@ feature has been stabilised and moved from:</p>
 <p>to:</p>
 <p><code>/_matrix/client/v1/register/m.login.registration_token/validity</code></p>
 <p>Please update any relevant reverse proxy or firewall configurations appropriately.</p>
+<h2 id="deprecation-of-capability-orgmatrixmsc3283"><a class="header" href="#deprecation-of-capability-orgmatrixmsc3283">Deprecation of <code>capability</code> <code>org.matrix.msc3283.*</code></a></h2>
+<p>The <code>capabilities</code> of MSC3283 from the REST API <code>/_matrix/client/r0/capabilities</code>
+becomes stable.</p>
+<p>The old <code>capabilities</code></p>
+<ul>
+<li><code>org.matrix.msc3283.set_displayname</code>,</li>
+<li><code>org.matrix.msc3283.set_avatar_url</code> and</li>
+<li><code>org.matrix.msc3283.3pid_changes</code></li>
+</ul>
+<p>are deprecated and scheduled to be removed in Synapse v1.(next+1).0.</p>
+<p>The new <code>capabilities</code></p>
+<ul>
+<li><code>m.set_displayname</code>,</li>
+<li><code>m.set_avatar_url</code> and</li>
+<li><code>m.3pid_changes</code></li>
+</ul>
+<p>are now active by default.</p>
 <h1 id="upgrading-to-v1530"><a class="header" href="#upgrading-to-v1530">Upgrading to v1.53.0</a></h1>
 <h2 id="dropping-support-for-webclient-listeners-and-non-https-web_client_location"><a class="header" href="#dropping-support-for-webclient-listeners-and-non-https-web_client_location">Dropping support for <code>webclient</code> listeners and non-HTTP(S) <code>web_client_location</code></a></h2>
 <p>Per the deprecation notice in Synapse v1.51.0, listeners of type  <code>webclient</code>
