--- a/develop/print.html
+++ b/develop/print.html
@@ -1638,7 +1638,14 @@ dpkg -i matrix-synapse-py3_1.3.0+stretch1_amd64.deb
 </code></pre>
 </li>
 </ul>
-<h1 id="upgrading-to-v1next"><a class="header" href="#upgrading-to-v1next">Upgrading to v1.(next)</a></h1>
+<h1 id="upgrading-to-v1530"><a class="header" href="#upgrading-to-v1530">Upgrading to v1.53.0</a></h1>
+<h2 id="dropping-support-for-webclient-listeners-and-non-https-web_client_location"><a class="header" href="#dropping-support-for-webclient-listeners-and-non-https-web_client_location">Dropping support for <code>webclient</code> listeners and non-HTTP(S) <code>web_client_location</code></a></h2>
+<p>Per the deprecation notice in Synapse v1.51.0, listeners of type  <code>webclient</code>
+are no longer supported and configuring them is a now a configuration error.</p>
+<p>Configuring a non-HTTP(S) <code>web_client_location</code> configuration is is now a
+configuration error. Since the <code>webclient</code> listener is no longer supported, this
+setting only applies to the root path <code>/</code> of Synapse's web server and no longer
+the <code>/_matrix/client/</code> path.</p>
 <h2 id="stablisation-of-msc3231"><a class="header" href="#stablisation-of-msc3231">Stablisation of MSC3231</a></h2>
 <p>The unstable validity-check endpoint for the 
 <a href="https://spec.matrix.org/v1.2/client-server-api/#get_matrixclientv1registermloginregistration_tokenvalidity">Registration Tokens</a> 
@@ -1664,14 +1671,13 @@ becomes stable.</p>
 <li><code>m.3pid_changes</code></li>
 </ul>
 <p>are now active by default.</p>
-<h1 id="upgrading-to-v1530"><a class="header" href="#upgrading-to-v1530">Upgrading to v1.53.0</a></h1>
-<h2 id="dropping-support-for-webclient-listeners-and-non-https-web_client_location"><a class="header" href="#dropping-support-for-webclient-listeners-and-non-https-web_client_location">Dropping support for <code>webclient</code> listeners and non-HTTP(S) <code>web_client_location</code></a></h2>
-<p>Per the deprecation notice in Synapse v1.51.0, listeners of type  <code>webclient</code>
-are no longer supported and configuring them is a now a configuration error.</p>
-<p>Configuring a non-HTTP(S) <code>web_client_location</code> configuration is is now a
-configuration error. Since the <code>webclient</code> listener is no longer supported, this
-setting only applies to the root path <code>/</code> of Synapse's web server and no longer
-the <code>/_matrix/client/</code> path.</p>
+<h2 id="removal-of-user_may_create_room_with_invites"><a class="header" href="#removal-of-user_may_create_room_with_invites">Removal of <code>user_may_create_room_with_invites</code></a></h2>
+<p>As announced with the release of <a href="upgrade.html#deprecation-of-the-user_may_create_room_with_invites-module-callback">Synapse 1.47.0</a>,
+the deprecated <code>user_may_create_room_with_invites</code> module callback has been removed.</p>
+<p>Modules relying on it can instead implement <a href="https://matrix-org.github.io/synapse/latest/modules/spam_checker_callbacks.html#user_may_invite"><code>user_may_invite</code></a>
+and use the <a href="https://github.com/matrix-org/synapse/blob/872f23b95fa980a61b0866c1475e84491991fa20/synapse/module_api/__init__.py#L869-L876"><code>get_room_state</code></a>
+module API to infer whether the invite is happening while creating a room (see <a href="https://github.com/matrix-org/synapse-domain-rule-checker/blob/e7d092dd9f2a7f844928771dbfd9fd24c2332e48/synapse_domain_rule_checker/__init__.py#L56-L89">this function</a>
+as an example). Alternately, modules can also implement <a href="https://matrix-org.github.io/synapse/latest/modules/third_party_rules_callbacks.html#on_create_room"><code>on_create_room</code></a>.</p>
 <h1 id="upgrading-to-v1520"><a class="header" href="#upgrading-to-v1520">Upgrading to v1.52.0</a></h1>
 <h2 id="twisted-security-release"><a class="header" href="#twisted-security-release">Twisted security release</a></h2>
 <p>Note that <a href="https://github.com/twisted/twisted/releases/tag/twisted-22.1.0">Twisted 22.1.0</a>
