deploy: 7812fe9eddd83c956d4deb5526c2f48b47f9ee82

--- a/develop/print.html
+++ b/develop/print.html
@@ -1669,7 +1669,7 @@ becomes stable.</p>
 <li><code>org.matrix.msc3283.set_avatar_url</code> and</li>
 <li><code>org.matrix.msc3283.3pid_changes</code></li>
 </ul>
-<p>are deprecated and scheduled to be removed in Synapse v1.(next+1).0.</p>
+<p>are deprecated and scheduled to be removed in Synapse v1.54.0.</p>
 <p>The new <code>capabilities</code></p>
 <ul>
 <li><code>m.set_displayname</code>,</li>
