deploy: 79c18e07099e8b886eac35711796a5becf17956e

--- a/develop/print.html
+++ b/develop/print.html
@@ -1696,7 +1696,7 @@ as an example). Alternately, modules can also implement <a href="https://matrix-
 has recently been released, which fixes a <a href="https://github.com/twisted/twisted/security/advisories/GHSA-92x2-jw7w-xvvx">security issue</a>
 within the Twisted library. We do not believe Synapse is affected by this vulnerability,
 though we advise server administrators who installed Synapse via pip to upgrade Twisted
-with <code>pip install --upgrade Twisted</code> as a matter of good practice. The Docker image
+with <code>pip install --upgrade Twisted treq</code> as a matter of good practice. The Docker image
 <code>matrixdotorg/synapse</code> and the Debian packages from <code>packages.matrix.org</code> are using the
 updated library.</p>
 <h1 id="upgrading-to-v1510"><a class="header" href="#upgrading-to-v1510">Upgrading to v1.51.0</a></h1>
