--- a/develop/print.html
+++ b/develop/print.html
@@ -9369,7 +9369,7 @@ server admin. (Note that a server admin is distinct from a room admin.)</p>
 <pre><code class="language-sql">UPDATE users SET admin = 1 WHERE name = '@foo:bar.com';
 </code></pre>
 <p>A new server admin user can also be created using the <code>register_new_matrix_user</code>
-command. This is a script that is located in the <code>scripts/</code> directory, or possibly
+command. This is a script that is distributed as part of synapse. It is possibly
 already on your <code>$PATH</code> depending on how Synapse was installed.</p>
 <p>Finding your user's <code>access_token</code> is client-dependent, but will usually be shown in the client's settings.</p>
 <h2 id="making-an-admin-api-request"><a class="header" href="#making-an-admin-api-request">Making an Admin API request</a></h2>
@@ -13821,9 +13821,9 @@ same as integers.</p>
 <ul>
 <li>
 <p>Any new boolean column must be added to the <code>BOOLEAN_COLUMNS</code> list in
-<code>scripts/synapse_port_db</code>. This tells the port script to cast the integer
-value from SQLite to a boolean before writing the value to the postgres
-database.</p>
+<code>synapse/_scripts/synapse_port_db.py</code>. This tells the port script to cast
+the integer value from SQLite to a boolean before writing the value to the
+postgres database.</p>
 </li>
 <li>
 <p>Before SQLite 3.23, <code>TRUE</code> and <code>FALSE</code> were not recognised as constants by
