deploy: 1fbe0316a991e77289d4577b16ff3fcd27c26dc8

--- a/develop/print.html
+++ b/develop/print.html
@@ -13461,7 +13461,7 @@ frobber:
   #distance: 100
 </code></pre>
 <p>Note that the sample configuration is generated from the synapse code
-and is maintained by a script, <code>scripts-dev/generate_sample_config</code>.
+and is maintained by a script, <code>scripts-dev/generate_sample_config.sh</code>.
 Making sure that the output from this script matches the desired format
 is left as an exercise for the reader!</p>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="synapse-release-cycle"><a class="header" href="#synapse-release-cycle">Synapse Release Cycle</a></h1>
