--- a/develop/print.html
+++ b/develop/print.html
@@ -1658,6 +1658,10 @@ to your Python installation's <code>bin</code>. This should be on your <code>PAT
 automatically, though you might need to activate a virtual environment
 depending on how you installed Synapse.</li>
 </ul>
+<h2 id="compatibility-dropped-for-mjolnir-131-and-earlier"><a class="header" href="#compatibility-dropped-for-mjolnir-131-and-earlier">Compatibility dropped for Mjolnir 1.3.1 and earlier</a></h2>
+<p>Synapse v1.55.0 drops support for Mjolnir 1.3.1 and earlier.
+If you use the Mjolnir module to moderate your homeserver,
+please upgrade Mjolnir to version 1.3.2 or later before upgrading Synapse.</p>
 <h1 id="upgrading-to-v1540"><a class="header" href="#upgrading-to-v1540">Upgrading to v1.54.0</a></h1>
 <h2 id="legacy-structured-logging-configuration-removal"><a class="header" href="#legacy-structured-logging-configuration-removal">Legacy structured logging configuration removal</a></h2>
 <p>This release removes support for the <code>structured: true</code> logging configuration
