--- a/develop/print.html
+++ b/develop/print.html
@@ -9001,8 +9001,8 @@ stream then, for maximum efficiency, additional endpoints should be routed to th
 worker: refer to the <a href="workers.html#stream-writers">stream writers</a> section below for further
 information.</p>
 <pre><code># Sync requests
-^/_matrix/client/(v2_alpha|r0|v3)/sync$
-^/_matrix/client/(api/v1|v2_alpha|r0|v3)/events$
+^/_matrix/client/(r0|v3)/sync$
+^/_matrix/client/(api/v1|r0|v3)/events$
 ^/_matrix/client/(api/v1|r0|v3)/initialSync$
 ^/_matrix/client/(api/v1|r0|v3)/rooms/[^/]+/initialSync$
 
@@ -9016,13 +9016,9 @@ information.</p>
 ^/_matrix/federation/v1/query/
 ^/_matrix/federation/v1/make_join/
 ^/_matrix/federation/v1/make_leave/
-^/_matrix/federation/v1/send_join/
-^/_matrix/federation/v2/send_join/
-^/_matrix/federation/v1/send_leave/
-^/_matrix/federation/v2/send_leave/
-^/_matrix/federation/v1/invite/
-^/_matrix/federation/v2/invite/
-^/_matrix/federation/v1/query_auth/
+^/_matrix/federation/(v1|v2)/send_join/
+^/_matrix/federation/(v1|v2)/send_leave/
+^/_matrix/federation/(v1|v2)/invite/
 ^/_matrix/federation/v1/event_auth/
 ^/_matrix/federation/v1/exchange_third_party_invite/
 ^/_matrix/federation/v1/user/devices/
@@ -9088,6 +9084,8 @@ information.</p>
 </code></pre>
 <p>Additionally, the following REST endpoints can be handled for GET requests:</p>
 <pre><code>^/_matrix/federation/v1/groups/
+^/_matrix/client/(api/v1|r0|v3|unstable)/pushrules/
+^/_matrix/client/(r0|v3|unstable)/groups/
 </code></pre>
 <p>Pagination requests can also be handled, but all requests for a given
 room must be routed to the same instance. Additionally, care must be taken to
@@ -9185,19 +9183,19 @@ the stream writer for the <code>typing</code> stream:</p>
 <h5 id="the-to_device-stream"><a class="header" href="#the-to_device-stream">The <code>to_device</code> stream</a></h5>
 <p>The following endpoints should be routed directly to the worker configured as
 the stream writer for the <code>to_device</code> stream:</p>
-<pre><code>^/_matrix/client/(api/v1|r0|v3|unstable)/sendToDevice/
+<pre><code>^/_matrix/client/(r0|v3|unstable)/sendToDevice/
 </code></pre>
 <h5 id="the-account_data-stream"><a class="header" href="#the-account_data-stream">The <code>account_data</code> stream</a></h5>
 <p>The following endpoints should be routed directly to the worker configured as
 the stream writer for the <code>account_data</code> stream:</p>
-<pre><code>^/_matrix/client/(api/v1|r0|v3|unstable)/.*/tags
-^/_matrix/client/(api/v1|r0|v3|unstable)/.*/account_data
+<pre><code>^/_matrix/client/(r0|v3|unstable)/.*/tags
+^/_matrix/client/(r0|v3|unstable)/.*/account_data
 </code></pre>
 <h5 id="the-receipts-stream"><a class="header" href="#the-receipts-stream">The <code>receipts</code> stream</a></h5>
 <p>The following endpoints should be routed directly to the worker configured as
 the stream writer for the <code>receipts</code> stream:</p>
-<pre><code>^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/receipt
-^/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/read_markers
+<pre><code>^/_matrix/client/(r0|v3|unstable)/rooms/.*/receipt
+^/_matrix/client/(r0|v3|unstable)/rooms/.*/read_markers
 </code></pre>
 <h5 id="the-presence-stream"><a class="header" href="#the-presence-stream">The <code>presence</code> stream</a></h5>
 <p>The following endpoints should be routed directly to the worker configured as
@@ -9276,7 +9274,7 @@ and you must configure a single instance to run the background tasks, e.g.:</p>
 <h3 id="synapseappuser_dir"><a class="header" href="#synapseappuser_dir"><code>synapse.app.user_dir</code></a></h3>
 <p>Handles searches in the user directory. It can handle REST endpoints matching
 the following regular expressions:</p>
-<pre><code>^/_matrix/client/(api/v1|r0|v3|unstable)/user_directory/search$
+<pre><code>^/_matrix/client/(r0|v3|unstable)/user_directory/search$
 </code></pre>
 <p>When using this worker you must also set <code>update_user_directory: False</code> in the
 shared configuration file to stop the main synapse running background
@@ -9285,7 +9283,7 @@ jobs related to updating the user directory.</p>
 <p>Proxies some frequently-requested client endpoints to add caching and remove
 load from the main synapse. It can handle REST endpoints matching the following
 regular expressions:</p>
-<pre><code>^/_matrix/client/(api/v1|r0|v3|unstable)/keys/upload
+<pre><code>^/_matrix/client/(r0|v3|unstable)/keys/upload
 </code></pre>
 <p>If <code>use_presence</code> is False in the homeserver config, it can also handle REST
 endpoints matching the following regular expressions:</p>
